2# - Add players to favorites

--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -11,6 +11,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="FavoriteTeams\" />
+    <Folder Include="FavoritePlayers\" />
     <Folder Include="Repo\Config\" />
   </ItemGroup>
 
