--- a/Windows Forms App/Windows Forms App.csproj
+++ b/Windows Forms App/Windows Forms App.csproj
@@ -9,4 +9,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DAL\DAL.csproj" />
+  </ItemGroup>
+
 </Project>
